--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiosignal==1.3.2
+attrs==25.3.0
 beautifulsoup4==4.13.3
 blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 Flask==3.1.0
+frozenlist==1.5.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+multidict==6.3.2
+propcache==0.3.1
 requests==2.32.3
 soupsieve==2.6
 typing_extensions==4.13.1
 urllib3==2.3.0
 Werkzeug==3.1.3
+yarl==1.18.3
 gunicorn==20.1.0
