--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 multidict==6.3.2
+nest-asyncio==1.6.0
 propcache==0.3.1
 requests==2.32.3
 soupsieve==2.6
@@ -21,4 +22,3 @@ typing_extensions==4.13.1
 urllib3==2.3.0
 Werkzeug==3.1.3
 yarl==1.18.3
-gunicorn==20.1.0
