--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,40 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.16
 aiosignal==1.3.2
+amqp==5.3.1
 attrs==25.3.0
 beautifulsoup4==4.13.3
+billiard==4.2.1
 blinker==1.9.0
+celery==5.5.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 Flask==3.1.0
 frozenlist==1.5.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+kombu==5.5.2
 MarkupSafe==3.0.2
 multidict==6.3.2
 nest-asyncio==1.6.0
+prompt_toolkit==3.0.50
 propcache==0.3.1
+python-dateutil==2.9.0.post0
+redis==5.2.1
 requests==2.32.3
+six==1.17.0
 soupsieve==2.6
 typing_extensions==4.13.1
+tzdata==2025.2
 urllib3==2.3.0
+vine==5.1.0
+wcwidth==0.2.13
 Werkzeug==3.1.3
 yarl==1.18.3
+gevent>=22.10.2
 gunicorn==20.1.0
